Fortify v0.0.27 [Fixed - Issue with importing the styles in the layout and added global styles]

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,10 +1,5 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -19,8 +14,66 @@
   }
 }
 
+:root {
+    /* Colors */
+    --bg-color: rgb(255, 255, 255);
+    --text-color: rgb(0, 0, 0);
+    --accent-color: #18CDF2;
+    --hover-color: rgba(24, 205, 242, 0.8);
+
+    --base-clr: #324B50;
+    --line-clr: #42434a;
+    --hover-clr: rgba(149, 176, 182, 0.3);
+    --text-clr: #e6e6ef;
+    --accent-clr: #81cad9;
+    --secondary-text-clr: #b0b3c1;
+    --Tertiary-Color: #95b0b6; /* Light Greyish/Blue */
+    --white: white;
+    --text-clr-dark: black;
+
+    --calendar-text: #333333;
+
+    /* Font */
+    --ff: 'Figtree', sans-serif;
+    --h1: bold 4rem/1em var(--ff);
+    --h2: bold 3rem/1.2em var(--ff);
+    --h3: bold 2.25rem/1.2em var(--ff);
+    --h4: bold 1.5rem/1.6em var(--ff);
+    --big: 1.25rem/1.6em var(--ff);
+    --p: 1rem/1.6em var(--ff);
+    --small: 0.75rem/2em var(--ff);
+
+    /* Spacing */
+    font-size: 16px;
+    --margin-xxs: .25rem;
+    --margin-xs: .5rem;
+    --margin-s: .75rem;
+    --margin-m: 1rem;
+    --margin-l: 1.25rem;
+    --margin-xl: 1.75rem;
+    --margin-xxl: 2.5rem;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    user-select: none;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  background-color: #1a2c38;
+  overflow-x: hidden;
+}
+
+html {
+    font-size: 16px;
+    overscroll-behavior: none;
+}
+
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #1a2c38;
+  color: var(--text-color);
+  overscroll-behavior: none;
 }
