Fortify v0.0.37 [Added - Registration with email has been added and configured for the api]

--- a/frontend/css/Login.module.css
+++ b/frontend/css/Login.module.css
@@ -189,6 +189,13 @@
     margin-top: var(--margin-xs);
 }
 
+.label_with_counter_email {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 0.25rem;
+}
+
 .character_counter {
     font-size: 0.75rem;
     color: #6b7280;
